# dictionaries_manager

./: .gitignore  pyproject.toml  settings.json
jsons/: countries.json  languages.json
src/: main.py
src/config/: settings.py
src/services/: localization_service.py
src/ui/screens/: settings_screen.py
src/ui/styles/: base.tcss
src/ui/themes/: as400.tcss
