[project]
name = "dictionaries-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual (>=5.3.0,<6.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[tool.poetry.scripts]
dictionaries-manager = "src.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
